# ROBOTIS-Framework

./: .gitignore  CMakeLists.txt  make.bash  test_x7.bash
robotis_controller/: CMakeLists.txt
robotis_controller/include/robotis_controller/: robotis_controller.h
robotis_controller/src/robotis_controller/: robotis_controller.cpp
robotis_device/: CMakeLists.txt
robotis_framework_common/: CMakeLists.txt
test/: CMakeLists.txt
test/config/: crane_x7.robot  crane_x7_init.yaml  crane_x7_offset.yaml
test/include/: test_motion_module.hpp
test/src/: test.cpp  test_motion_module.cpp
